<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtExpressao"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ellipsize="start"
        android:gravity="end"
        android:onClick="setNumber"
        android:orientation="horizontal"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="30sp"></TextView>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:onClick="setNumber"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:textSize="45sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLimpar"
            style="@style/Operators_button"
            android:layout_weight="3"
            android:onClick="setOperator"
            android:text="@string/Clear"
            android:textColor="@color/white"
            android:layout_width="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDivisao"
            style="@style/Operators_button"
            android:onClick="setOperator"
            android:text="@string/barra"
            android:textColor="@color/white"
            android:layout_width="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberSeven"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_7"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberEight"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_8"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberNine"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_9"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberMutiplication"
            style="@style/Operators_button"
            android:onClick="setOperator"
            android:text="@string/x"
            android:textColor="@color/white"
            android:layout_width="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberFour"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_4"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberFive"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_5"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberSix"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_6"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberMinus"
            style="@style/Operators_button"
            android:onClick="setOperator"
            android:text="@string/menos"
            android:textColor="@color/white"
            android:layout_width="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberOne"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_1"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberTwo"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_2"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberThree"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_3"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberPlus"
            style="@style/Operators_button"
            android:onClick="setOperator"
            android:text="@string/mais"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dot"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_ponto"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberZero"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:text="@string/_0"
            android:layout_width="0dp"/>

        <ImageView
            android:id="@+id/delete"
            style="@style/Numbers_button"
            android:onClick="setNumber"
            android:scaleType="center"
            android:src="@drawable/backspace"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equal"
            style="@style/Operators_button"
            android:onClick="setOperator"
            android:text="="
            android:textColor="@color/white"
            android:layout_width="0dp"/>

    </LinearLayout>

</LinearLayout>